[gd_scene load_steps=20 format=3 uid="uid://ox1bukkjcg2a"]

[ext_resource type="Texture2D" uid="uid://dddvrkxydb5o0" path="res://AssetsDescargados/Heros.png" id="1"]
[ext_resource type="Script" path="res://HeroP.gd" id="2"]
[ext_resource type="Script" path="res://LifeCounterHero.gd" id="3"]

[sub_resource type="RectangleShape2D" id="10"]
size = Vector2(91, 40)

[sub_resource type="RectangleShape2D" id="1"]
size = Vector2(53, 76)

[sub_resource type="Animation" id="11"]
resource_name = "Attack1"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [28, 31]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D/SwordHit/CollisionShape2D:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.4),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [false, false, true]
}

[sub_resource type="Animation" id="13"]
resource_name = "Attack2"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [61, 66]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D/SwordHit/CollisionShape2D:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.1, 0.4),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [false, false]
}

[sub_resource type="Animation" id="9"]
resource_name = "Dead1"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [32, 34]
}

[sub_resource type="Animation" id="14"]
resource_name = "Dead2"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.7),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [67, 69]
}

[sub_resource type="Animation" id="4"]
resource_name = "Jump1"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [8, 16]
}

[sub_resource type="Animation" id="5"]
resource_name = "Jump2"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [42, 52]
}

[sub_resource type="Animation" id="3"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:frame_coords")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D/SwordHit/CollisionShape2D:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [true]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("CollisionShape2D:disabled")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [false]
}

[sub_resource type="Animation" id="6"]
resource_name = "Run1"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.8),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [17, 24]
}

[sub_resource type="Animation" id="8"]
resource_name = "Run2"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [53, 60]
}

[sub_resource type="Animation" id="15"]
resource_name = "Run3"

[sub_resource type="Animation" id="12"]
resource_name = "State1"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [25, 27]
}

[sub_resource type="Animation" id="2"]
resource_name = "Walk1"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0, 6]
}

[sub_resource type="Animation" id="7"]
resource_name = "Walk2"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [35, 41]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ag60o"]
_data = {
"Attack1": SubResource("11"),
"Attack2": SubResource("13"),
"Dead1": SubResource("9"),
"Dead2": SubResource("14"),
"Jump1": SubResource("4"),
"Jump2": SubResource("5"),
"RESET": SubResource("3"),
"Run1": SubResource("6"),
"Run2": SubResource("8"),
"Run3": SubResource("15"),
"State1": SubResource("12"),
"Walk1": SubResource("2"),
"Walk2": SubResource("7")
}

[node name="Hero" type="CharacterBody2D"]
position = Vector2(0, 1)
script = ExtResource("2")

[node name="LifeCounterHero" type="Label" parent="."]
offset_left = -53.0
offset_top = -122.0
offset_right = 53.0
offset_bottom = -108.0
script = ExtResource("3")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("1")
hframes = 10
vframes = 12
frame = 1

[node name="SwordHit" type="Area2D" parent="Sprite2D"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Sprite2D/SwordHit"]
position = Vector2(-5.5, 1)
shape = SubResource("10")
disabled = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-6.5, -8)
shape = SubResource("1")

[node name="PainSound" type="AudioStreamPlayer2D" parent="."]

[node name="Timer" type="Timer" parent="."]

[node name="Marker2D" type="Marker2D" parent="."]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_ag60o")
}

[node name="GameOverLabel" type="Label" parent="."]
visible = false
anchors_preset = 10
anchor_right = 1.0
offset_left = -61.0
offset_top = -100.0
offset_right = 65.0
offset_bottom = -55.0
text = "Game Over"
horizontal_alignment = 1
vertical_alignment = 1
uppercase = true

[node name="WinLabel" type="Label" parent="."]
visible = false
anchors_preset = 10
anchor_right = 1.0
offset_left = -61.0
offset_top = -100.0
offset_right = 65.0
offset_bottom = -55.0
text = "GANADOR!!!"
horizontal_alignment = 1
vertical_alignment = 1
uppercase = true

[connection signal="body_entered" from="Sprite2D/SwordHit" to="." method="_on_SwordHit_body_entered"]
[connection signal="child_entered_tree" from="Timer" to="." method="_on_Timer_child_entered_tree"]
